
option java_outer_classname="GetRunningTasksResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetRunningTasksResponse {
	repeated string runningTasks = 1;
}